--- a/Section11_AdicionandoSuporteMigrationsComFlyway/src/main/resources/application.yml
+++ b/Section11_AdicionandoSuporteMigrationsComFlyway/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       password: root
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       show-sql: false
     open-in-view: false
