--- a/Section15_AdicionandoSuporteSwaggerOpenAPI/src/test/resources/application.yml
+++ b/Section15_AdicionandoSuporteSwaggerOpenAPI/src/test/resources/application.yml
@@ -1,9 +1,11 @@
+server:
+  port: 8888
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/erudio?useTimezone=true&serverTimezone=UTC
-      username: root
-      password: root
+#      url: jdbc:mysql://localhost:3306/erudio?useTimezone=true&serverTimezone=UTC
+#      username: root
+#      password: root
   jpa:
     hibernate:
       ddl-auto: none
