--- a/Section16_AutenticacaoComJWTSpringSecurity/src/main/resources/application.yml
+++ b/Section16_AutenticacaoComJWTSpringSecurity/src/main/resources/application.yml
@@ -1,10 +1,5 @@
 cors:
   originPatterns: http://localhost:3000,http://localhost:8000,https://erudio.com.br
-security:
-  jwt:
-    token:
-      secret-key: 53cr37
-      expire-length: 3600000
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,8 +13,6 @@ spring:
       show-sql: false
     open-in-view: false
 spring-doc:
-  pathsToMatch:
-    - /auth/**
-    - /api/**
+  pathsToMatch: /api/**
   swagger-ui:
     use-root-path: true
